# open-access-control

./: BuildTips.md  CMakeLists.txt  DoorInstallation.md  Doxyfile  HardwareTips.md  HelpUs.md  LinuxMonitoring.md  ProjectHome.md  README.txt  RaspberryPiSetup.md  SoftwareTips.md  Welcome.md
Open_Access_Control/: Open_Access_Control.pde  Open_Access_Control_Mega_Hack_Factory_v3.ino  main.cpp
branches/library-refactor/: CMakeLists.txt
branches/library-refactor/Open_Access_Control/: Open_Access_Control.pde
branches/library-refactor/libraries/DS1307/: DS1307.cpp  DS1307.h
branches/library-refactor/libraries/PCATTACH/: PCATTACH.h
branches/library-refactor/libraries/PinCatcher/: PinCatcher.cpp  PinCatcher.h  PinCatcher_impl.cpp  PinCatcher_impl.h
branches/library-refactor/libraries/WIEGAND26/: WIEGAND26.cpp  WIEGAND26.h  keywords.txt
libraries/PCATTACH/: PCATTACH.cpp  PCATTACH.h
libraries/PinCatcher/: PinCatcher.h  PinCatcher_impl.cpp  PinCatcher_impl.h
libraries/PinCatcher/examples/: PinCatcherTest.pde
libraries/WIEGAND26/: WIEGAND26.cpp  WIEGAND26.h
libraries/Wiegand26/: Wiegand26.cpp  Wiegand26.h  keywords.txt
tags/release_v1.32/Open_Access_Control/: Open_Access_Control-16.pde
trunk/: PCATTACH.cpp
trunk/Open_Access_Control/: Open_Access_Control.pde  Open_Access_Control_Mega_Hack_Factory_v3.0.0a.ino  Open_Access_Control_Mega_Hack_Factory_v3.ino
wiki/: AccessOverview.wiki  BuildTips.wiki  DoorInstallation.wiki  HardwareTips.wiki  HelpUs.wiki  LinuxMonitoring.wiki  RaspberryPiSetup.wiki  SoftwareTips.wiki  Welcome.wiki
(+3 files in other folders)
